<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pf_localization</name>
  <version>1.0.0</version>
  <description>
    Particle Filter Localization with AR Tags in Gazebo Ignition Fortress.
    Final project for AIN451 (Robotics / Motion Planning).
  </description>
  <maintainer email="kaan@example.com">Yuksel Kaan Bolukbas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- Gazebo bridge -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <!-- or: <exec_depend>ros_ign_bridge</exec_depend> -->

  <!-- Launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python 3 libraries (installed via apt/pip outside ROS) -->
  <!-- numpy, matplotlib, opencv-python -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
